Fix text align bug

--- a/src/pages/Detectors/Detectors.css
+++ b/src/pages/Detectors/Detectors.css
@@ -59,6 +59,7 @@
 }
 
 .estate__detectors-icon_container h3 {
+    text-align: center;
     font-size: 20px;
     color: var(--header-dark);
     margin: 0 0 0.7em;
