--- a/src/pages/Integrations/Integrations.css
+++ b/src/pages/Integrations/Integrations.css
@@ -56,6 +56,7 @@
 }
 
 .integrations__icon-container h4 {
+    text-align: center;
     font-size: 24px;
     color: var(--header-dark);
 }
